[tool.poetry]
name = "ischristtrue.com"
version = "1.0.0"
description = ""
authors = ["RS Christopher <rschristopher@avant.net>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

